kubemanifestfile/Service.yml
apiVersion: v1
kind: Service 
metadata:
  name: deployment-loadbalancer-service
  # annotations:
  #   service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer # ClusterIp, # NodePort
  selector:
    app: myapp3
  ports: 
    - name: http
      port: 80 # Service Port
      targetPort: 80 # Container Port
